# cbt-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  auto_seed.py  check_models.py  docker-compose.yml  pyproject.toml  seed.py  seed_tasks.json  test_config.py
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_is_blocked_to_users.py  ab6ab17023e4_initial_tables.py  b1a6b2c49842_admin_panel_stage1_add_user_fields_and_.py  b541a345da6b_add_max_streak_column.py  c0d1a5b2e3f4_add_monetization_and_usage.py  cf87594fdd9b_fix_attempts_table.py  e3f1a2b4c5d6_add_unique_constraint_attempts_user_task.py  f1a2b3c4d5e6_fix_max_streak_missing.py  g2h3i4j5k6l7_add_is_age_confirmed_to_users.py  h3i4j5k6l7m8_add_reactivation_tables.py  i4j5k6l7m8n9_cascade_delete_reactivation_log.py
app/: main.py  run_polling.py  web.py
app/admin/: auth.py  router.py
app/admin/templates/: base.html  broadcast.html  dashboard.html  reactivation.html  tasks.html  tokens.html  users.html
app/bot/: dispatcher.py  states.py
app/bot/constants/: crisis.py
app/bot/filters/: admin.py
app/bot/handlers/: admin.py  ai_generator.py  base.py  broadcast.py  check_answer.py  distortions_pdf.py  feedback.py  my_situation.py  payments.py  progress.py  test_mode.py  training.py
app/bot/middleware/: block_check.py  logging_mw.py  rate_limit.py
app/bot/middlewares/: ai_quota.py  db.py  throttling.py  user.py
app/core/: config.py  logging.py
app/db/: models.py  session.py
app/schemas/: task_schema.py
app/services/: claude.py  limits.py  payments.py  prompts.py  reactivation.py  scheduler.py  tasks.py  usage_logger.py
app/utils/: html.py
site/: index.html  script.js  style.css
tests/: conftest.py  test_admin_filter.py  test_check_answer_logic.py  test_claude_service.py  test_html.py  test_limits.py  test_my_situation.py  test_payments.py  test_prompts.py  test_reactivation.py  test_redis_lock.py  test_test_mode.py  test_throttling.py  test_training.py  test_usage_logger.py
