[project]
name = "cbt-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "fastapi (>=0.123.4,<0.124.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "anthropic (>=0.40.0,<1.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "python-json-logger (>=4.0.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "cbt_bot", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "ruff (>=0.14.7,<0.15.0)",
    "black (>=25.11.0,<26.0.0)"
]
